--- a/second.html
+++ b/second.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     Это второй файл<br>
-    <a href="/">Первый файл</a>
+    <a href="/booba/">Первый файл</a>
   </body>
 </html>
